--- a/FingerprintBuilder.Tests/FingerprintBuilder.Tests.csproj
+++ b/FingerprintBuilder.Tests/FingerprintBuilder.Tests.csproj
@@ -1,12 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
+    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;netstandard2.0;net472</TargetFrameworks>
     <IsPackable>false</IsPackable>
-
     <AssemblyName>FingerprintBuilder,Tests</AssemblyName>
-
     <RootNamespace>FingerprintBuilder.Tests</RootNamespace>
   </PropertyGroup>
 
