--- a/FingerprintBuilder/FingerprintBuilder.csproj
+++ b/FingerprintBuilder/FingerprintBuilder.csproj
@@ -9,6 +9,7 @@
     <Authors>gonace</Authors>
     <Company>laget.se</Company>
     <PackageProjectUrl>https://github.com/laget-se/FingerprintBuilder</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/laget-se/FingerprintBuilder/master/src/assets/icon.png</PackageIconUrl>
     <Product>Model.Fingerprint</Product>
   </PropertyGroup>
 
