--- a/FingerprintBuilder.Tests/FingerprintBuilder.Tests.csproj
+++ b/FingerprintBuilder.Tests/FingerprintBuilder.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net472;net462</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net48;net472;net462</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <AssemblyName>FingerprintBuilder,Tests</AssemblyName>
     <RootNamespace>FingerprintBuilder.Tests</RootNamespace>
