--- a/FingerprintBuilder/FingerprintBuilder.csproj
+++ b/FingerprintBuilder/FingerprintBuilder.csproj
@@ -16,7 +16,7 @@
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl />
     <RepositoryType>git</RepositoryType>
-    <Description />
+    <Description>Calculates a fingerprint (hash) for an object that can be stored in Memory or a persistent data store.</Description>
     <PackageTags>hash;fingerprint</PackageTags>
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <FileVersion>1.0.1.0</FileVersion>
