--- a/FingerprintBuilder/FingerprintBuilder.nuspec
+++ b/FingerprintBuilder/FingerprintBuilder.nuspec
@@ -7,7 +7,7 @@
     <authors>gonace,laget.se</authors>
     <owners>laget.se</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description></description>
+    <description>Calculates a fingerprint (hash) for an object that can be stored in Memory or a persistent data store.</description>
     <summary></summary>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/laget-se/FingerprintBuilder</projectUrl>
