--- a/FingerprintBuilder/FingerprintBuilder.nuspec
+++ b/FingerprintBuilder/FingerprintBuilder.nuspec
@@ -11,7 +11,10 @@
     <summary></summary>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/laget-se/FingerprintBuilder</projectUrl>
-    <icon>https://raw.githubusercontent.com/laget-se/FingerprintBuilder/master/assets/icon.png</icon>
+    <icon>assets\icon.png</icon>
     <repository type="git" url="https://github.com/laget-se/FingerprintBuilder" branch="master" />
   </metadata>
+  <files>
+    <file src="..\assets\icon.png" target="assets\" />
+  </files>
 </package>
