--- a/FingerprintBuilder/FingerprintBuilder.nuspec
+++ b/FingerprintBuilder/FingerprintBuilder.nuspec
@@ -17,4 +17,11 @@
   <files>
     <file src="..\assets\icon.png" target="assets\" />
   </files>
+  <dependencies>
+    <group targetFramework="netcoreapp3.1"></group>
+    <group targetFramework="netcoreapp1.1"></group>
+    <group targetFramework=".NETFramework4.8"></group>
+    <group targetFramework=".NETFramework4.7.2"></group>
+    <group targetFramework=".NETFramework4.6.2"></group>
+  </dependencies>
 </package>
