--- a/Model.Fingerprint/Model.Fingerprint.csproj
+++ b/Model.Fingerprint/Model.Fingerprint.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net48;net472;net462</TargetFrameworks>
-    <AssemblyName>FingerprintBuilder</AssemblyName>
-    <RootNamespace>FingerprintBuilder</RootNamespace>
+    <AssemblyName>Model.Fingerprint</AssemblyName>
+    <RootNamespace>Model.Fingerprint</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Model.Fingerprint</PackageId>
     <Authors>gonace,laget.se</Authors>
