--- a/Model.Fingerprint/Model.Fingerprint.csproj
+++ b/Model.Fingerprint/Model.Fingerprint.csproj
@@ -1,26 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net48;net472;net462</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netstandard2.0;net48;net472;net462</TargetFrameworks>
     <AssemblyName>Model.Fingerprint</AssemblyName>
     <RootNamespace>Fingerprint</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Model.Fingerprint</PackageId>
     <Authors>gonace,laget.se</Authors>
     <Company>laget.se</Company>
-    <PackageProjectUrl>https://github.com/laget-se/FingerprintBuilder</PackageProjectUrl>
-    <Icon>https://raw.githubusercontent.com/laget-se/FingerprintBuilder/master/assets/icon.png</Icon>
+    <PackageProjectUrl>https://github.com/laget-se/Model.Fingerprint</PackageProjectUrl>
+    <Icon>https://raw.githubusercontent.com/laget-se/Model.Fingerprint/master/assets/icon.png</Icon>
     <Product>Model.Fingerprint</Product>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/laget-se/FingerprintBuilder</RepositoryUrl>
+    <RepositoryUrl>https://github.com/laget-se/Model.Fingerprint</RepositoryUrl>
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl />
     <RepositoryType>git</RepositoryType>
     <Description>Calculates a fingerprint (hash) for an object that can be stored in Memory or a persistent data store.</Description>
     <PackageTags>hash;fingerprint</PackageTags>
-    <AssemblyVersion>1.0.0.1</AssemblyVersion>
-    <FileVersion>1.0.0.1</FileVersion>
-    <Version>1.0.0.1</Version>
+    <AssemblyVersion>1.0.0.2</AssemblyVersion>
+    <FileVersion>1.0.0.2</FileVersion>
+    <Version>1.0.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
