--- a/Model.Fingerprint/Model.Fingerprint.nuspec
+++ b/Model.Fingerprint/Model.Fingerprint.nuspec
@@ -10,15 +10,15 @@
     <description>Calculates a fingerprint (hash) for an object that can be stored in Memory or a persistent data store.</description>
     <summary></summary>
     <license type="expression">MIT</license>
-    <projectUrl>https://github.com/laget-se/FingerprintBuilder</projectUrl>
+    <projectUrl>https://github.com/laget-se/Model.Fingerprint</projectUrl>
     <icon>assets\icon.png</icon>
-    <repository type="git" url="https://github.com/laget-se/FingerprintBuilder" branch="master" />
+    <repository type="git" url="https://github.com/laget-se/Model.Fingerprint" branch="master" />
     <dependencies>
-        <group targetFramework="netcoreapp3.1"></group>
-        <group targetFramework="netcoreapp2.1"></group>
-        <group targetFramework=".NETFramework4.8"></group>
-        <group targetFramework=".NETFramework4.7.2"></group>
-        <group targetFramework=".NETFramework4.6.2"></group>
+      <group targetFramework="netstandard2.1"></group>
+      <group targetFramework="netstandard2.0"></group>
+      <group targetFramework=".NETFramework4.8"></group>
+      <group targetFramework=".NETFramework4.7.2"></group>
+      <group targetFramework=".NETFramework4.6.2"></group>
     </dependencies>
   </metadata>
   <files>
