--- a/Model.Fingerprint.Tests/Model.Fingerprint.Tests.csproj
+++ b/Model.Fingerprint.Tests/Model.Fingerprint.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net48;net472;net462</TargetFrameworks>      <TargetFrameworks>netstandard2.1;netstandard2.0;net48;net472;net462</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.0;netcoreapp2.1;net48;net472;net462</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <AssemblyName>Model.Fingerprint.Tests</AssemblyName>
     <RootNamespace>Fingerprint.Tests</RootNamespace>
