--- a/Model.Fingerprint/Model.Fingerprint.csproj
+++ b/Model.Fingerprint/Model.Fingerprint.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1;netstandard2.0;net48;net472;net462</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.0;netcoreapp2.1;net48;net472;net462</TargetFrameworks>
     <AssemblyName>Model.Fingerprint</AssemblyName>
     <RootNamespace>Fingerprint</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
