--- a/Model.Fingerprint/Model.Fingerprint.nuspec
+++ b/Model.Fingerprint/Model.Fingerprint.nuspec
@@ -14,14 +14,19 @@
     <icon>assets\icon.png</icon>
     <repository type="git" url="https://github.com/laget-se/Model.Fingerprint" branch="master" />
     <dependencies>
-      <group targetFramework="netcoreapp3.0"></group>
+      <group targetFramework="netcoreapp3.1"></group>
       <group targetFramework="netcoreapp2.1"></group>
-      <group targetFramework=".NETFramework4.8"></group>
-      <group targetFramework=".NETFramework4.7.2"></group>
-      <group targetFramework=".NETFramework4.6.2"></group>
+      <group targetFramework="net48"></group>
+      <group targetFramework="net472"></group>
+      <group targetFramework="net462"></group>
     </dependencies>
   </metadata>
   <files>
     <file src="..\assets\icon.png" target="assets\" />
+    <file src=".\bin\Release\netcoreapp3.1\*" target="lib\netcoreapp3.1\" />
+    <file src=".\bin\Release\netcoreapp2.1\*" target="lib\netcoreapp2.1\" />
+    <file src=".\bin\Release\net48\*" target="lib\net48\" />
+    <file src=".\bin\Release\net472\*" target="lib\net472\" />
+    <file src=".\bin\Release\net462\*" target="lib\net462\" />
   </files>
 </package>
