--- a/Model.Fingerprint/Model.Fingerprint.nuspec
+++ b/Model.Fingerprint/Model.Fingerprint.nuspec
@@ -10,9 +10,9 @@
     <description>Calculates a fingerprint (hash) for an object that can be stored in Memory or a persistent data store.</description>
     <summary></summary>
     <license type="expression">MIT</license>
-    <projectUrl>https://github.com/laget-se/Model.Fingerprint</projectUrl>
+    <projectUrl>https://github.com/laget-se/Fingerprint</projectUrl>
     <icon>assets\icon.png</icon>
-    <repository type="git" url="https://github.com/laget-se/Model.Fingerprint" branch="master" />
+    <repository type="git" url="https://github.com/laget-se/Fingerprint" branch="master" />
     <dependencies>
       <group targetFramework="netcoreapp3.1"></group>
       <group targetFramework="netcoreapp2.1"></group>
