--- a/laget.Fingerprint/laget.Fingerprint.csproj
+++ b/laget.Fingerprint/laget.Fingerprint.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net48;net472;net462</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netstandard2.0;netcoreapp3.1;netcoreapp2.1;net48;net472;net462</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
