--- a/laget.Fingerprint/laget.Fingerprint.nuspec
+++ b/laget.Fingerprint/laget.Fingerprint.nuspec
@@ -14,6 +14,8 @@
     <icon>assets\icon.png</icon>
     <repository type="git" url="https://github.com/laget-se/Fingerprint" branch="master" />
     <dependencies>
+      <group targetFramework="netstandard2.1"></group>
+      <group targetFramework="netstandard2.0"></group>
       <group targetFramework="netcoreapp3.1"></group>
       <group targetFramework="netcoreapp2.1"></group>
       <group targetFramework="net48"></group>
@@ -23,6 +25,8 @@
   </metadata>
   <files>
     <file src="..\assets\icon.png" target="assets\" />
+    <file src=".\bin\Release\netstandard2.1\*" target="lib\netstandard2.1\" />
+    <file src=".\bin\Release\netstandard2.0\*" target="lib\netstandard2.0\" />
     <file src=".\bin\Release\netcoreapp3.1\*" target="lib\netcoreapp3.1\" />
     <file src=".\bin\Release\netcoreapp2.1\*" target="lib\netcoreapp2.1\" />
     <file src=".\bin\Release\net48\*" target="lib\net48\" />
