--- a/laget.Fingerprint/laget.Fingerprint.nuspec
+++ b/laget.Fingerprint/laget.Fingerprint.nuspec
@@ -9,7 +9,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Calculates a fingerprint (hash) for an object that can be stored in Memory or a persistent data store.</description>
     <summary></summary>
-    <license type="expression">MIT</license>
+    <license type="expression">Apache-2.0</license>
     <projectUrl>https://github.com/laget-se/Fingerprint</projectUrl>
     <icon>assets\icon.png</icon>
     <repository type="git" url="https://github.com/laget-se/Fingerprint" branch="master" />
