--- a/laget.Fingerprint/laget.Fingerprint.nuspec
+++ b/laget.Fingerprint/laget.Fingerprint.nuspec
@@ -12,7 +12,7 @@
     <license type="expression">Apache-2.0</license>
     <projectUrl>https://github.com/laget-se/Fingerprint</projectUrl>
     <icon>assets\icon.png</icon>
-    <repository type="git" url="https://github.com/laget-se/Fingerprint" branch="master" />
+    <repository type="git" url="https://github.com/laget-se/laget.Fingerprint" branch="master" />
     <dependencies>
       <group targetFramework="netstandard2.1"></group>
       <group targetFramework="netstandard2.0"></group>
