--- a/laget.Fingerprint.Tests/laget.Fingerprint.Tests.csproj
+++ b/laget.Fingerprint.Tests/laget.Fingerprint.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net48;net472;net462</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net48</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <AssemblyName>laget.Fingerprint.Tests</AssemblyName>
     <RootNamespace>laget.Fingerprint.Tests</RootNamespace>
