--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch: {}
 
 jobs:
   tests:
@@ -40,9 +41,10 @@ jobs:
     - name: Build
       run: dotnet build laget.Fingerprint/laget.Fingerprint.csproj --no-restore --configuration Release
     - name: Publish
-      uses: laget-se/publish-nuget@v2.6.10
+      uses: laget-se/publish-nuget@v2.7.2
       with:
-        PROJECT_FILE_PATH: laget.Fingerprint/laget.Fingerprint.csproj
+        INCLUDE_SYMBOLS: true
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
         NUSPEC_FILE: laget.Fingerprint.nuspec
+        PROJECT_FILE_PATH: laget.Fingerprint/laget.Fingerprint.csproj
         VERSION_STATIC: "1.2.${{github.run_number}}"
