--- a/laget.Fingerprint.Benchmarks/laget.Fingerprint.Benchmarks.csproj
+++ b/laget.Fingerprint.Benchmarks/laget.Fingerprint.Benchmarks.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.30.0" />
   </ItemGroup>
 
   <ItemGroup>
